Adicionando os seeds de usuários homens, mulheres e academias

--- a/app/views/gyms/index.html.erb
+++ b/app/views/gyms/index.html.erb
@@ -23,7 +23,7 @@
       <div class="row g-0 align-items-center">
         <div class="col-md-4 w-auto">
           <%= link_to gym_path(gym), class: "card-title text-decoration-none" do %>
-            <%= image_tag "growth-logo-or.png", class: "card-img" %>
+            <%= image_tag gym.gym_image, class: "card-img" %>
           <% end %>
         </div>
         <div class="col-md-8 w-auto">
