--- a/app/assets/stylesheets/pages/_profile.scss
+++ b/app/assets/stylesheets/pages/_profile.scss
@@ -27,12 +27,11 @@ form {
     color: #fff;
   }
 
-  input[type="number"], input[type="file"] {
+  input[type="number"],
+  input[type="file"] {
     padding: 10px;
     border: 1px solid #444;
     border-radius: 5px;
-    background-color: #121212;
-    color: #fff;
   }
 
   .btn {
