fix bug academias mapbox

--- a/app/assets/stylesheets/components/_filter.scss
+++ b/app/assets/stylesheets/components/_filter.scss
@@ -3,12 +3,12 @@
   color: white;
 }
 
-.btn-outline-success {
+.comodies {
   border-color: #28a745;
   color: #28a745;
 }
 
-.btn-outline-success.btn-success {
+.comodies.btn-success {
   background-color: #28a745;
   color: white;
 }
