--- a/app/views/gyms/map.html.erb
+++ b/app/views/gyms/map.html.erb
@@ -13,8 +13,8 @@
     <span id="occupancy-value"><%= params[:occupancy] || 0 %></span>
 
     <label for="distance">Distância Máxima (km):</label>
-    <input type="range" id="distance" name="distance" value="<%= params[:distance] || 10 %>" min="1" max="50" step="1">
-    <span id="distance-value"><%= params[:distance] || 10 %></span> km
+    <input type="range" id="distance" name="distance" value="<%= params[:distance] || 100 %>" min="1" max="50" step="1">
+    <span id="distance-value"><%= params[:distance] || 100 %></span> km
 
     <h6>Comodidades</h6>
     <div class="mb-3 d-flex flex-wrap gap-2">
@@ -24,19 +24,18 @@
       <% end %>
     </div>
 
-  <button id="apply-filters">Aplicar Filtros</button>
-  <button id="clear-filters">Limpar Filtros</button>
-</aside>
+    <button id="apply-filters">Aplicar Filtros</button>
+    <button id="clear-filters">Limpar Filtros</button>
+  </aside>
 
   <div style="width: 100%; height: 600px;"
     data-controller="map"
     data-map-markers-value="<%= @markers.to_json %>"
     data-map-api-key-value="<%= ENV['MAPBOX_API_KEY'] %>"
     data-map-user-location-value="<%= @user_location.to_json %>"
-    data-map-distance-value="<%= params[:distance] || 10 %>">
+    data-map-distance-value="<%= params[:distance] || 100 %>">
   </div>
 </div>
-
 
 <script>
   document.getElementById('toggle-filters').addEventListener('click', function() {
@@ -61,6 +60,13 @@
     url.searchParams.set('amenities', amenities);
     url.searchParams.set('distance', distance); // Adiciona a distância à URL
     window.location = url;
+
+    // Aplicar filtros no controlador Stimulus
+    const controller = document.querySelector('[data-controller="map"]').__controller;
+    controller.capacityValue = parseInt(occupancy);
+    controller.amenitiesValue = amenities;
+    controller.distanceValue = parseInt(distance);
+    controller.applyFilters();
   });
 
   document.getElementById('clear-filters').addEventListener('click', function() {
@@ -68,11 +74,15 @@
     document.getElementById('occupancy-value').textContent = 0;
     document.querySelectorAll('.amenity-checkbox').forEach(checkbox => checkbox.checked = false);
     document.getElementById('search').value = '';
-    const url = new URL(window.location);
-    url.searchParams.delete('occupancy');
-    url.searchParams.delete('amenities');
-    url.searchParams.delete('query');
+    const url = new URL('/map', window.location.origin); // Redireciona para /map
     window.location = url;
+
+    // Limpar filtros no controlador Stimulus
+    const controller = document.querySelector('[data-controller="map"]').__controller;
+    controller.capacityValue = 0;
+    controller.amenitiesValue = [];
+    controller.distanceValue = 100;
+    controller.applyFilters();
   });
 
   document.getElementById('search-button').addEventListener('click', function() {
