--- a/app/assets/stylesheets/components/_form_legend_clear.scss
+++ b/app/assets/stylesheets/components/_form_legend_clear.scss
@@ -8,3 +8,7 @@
 legend ~ div.form-check:first-of-type {
   clear: left;
 }
+.label-formularios {
+  color: #f44336 !important;
+  font-weight: bold;
+}
