--- a/app/assets/stylesheets/pages/_my_profile.scss
+++ b/app/assets/stylesheets/pages/_my_profile.scss
@@ -1,15 +1,21 @@
-/* Estilo global */
-
 /* Contêiner do formulário */
+.edit-profile-container {
+  padding: 20px;
+  padding-bottom: 90px;
+}
 .edit-profile-form {
   max-width: 600px;
   margin: 0 auto;
   padding: 30px;
-  background-color: #1f1f1f; /* Fundo do formulário escuro */
+  border-radius: 10px;
+}
+
+.edit-container {
+  padding: 20px;
+  border: 1px solid #b6b5b5;
   border-radius: 10px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
 }
-
 /* Título do formulário */
 .edit-profile-form h1 {
   text-align: center;
