--- a/app/assets/stylesheets/pages/_carousel.scss
+++ b/app/assets/stylesheets/pages/_carousel.scss
@@ -44,6 +44,10 @@
   border-radius: 50%;
 }
 
+.bg-progresso {
+  background-color: #d3d3d3;
+}
+
 /* Responsividade - mobile */
 @media (max-width: 768px) {
   .carousel-inner img {
@@ -90,7 +94,7 @@ input[type="file"] {
   width: 100%;
   border-radius: 5px;
   background-color: rgba(255, 255, 255, 0.1);
-  color: #fff;
+  color: black;
   border: 1px solid #fff;
 }
 
