--- a/app/assets/stylesheets/pages/_my_profile.scss
+++ b/app/assets/stylesheets/pages/_my_profile.scss
@@ -43,8 +43,7 @@
   font-size: 1rem;
   border: 1px solid #333;
   border-radius: 8px;
-  background-color: #333;
-  color: #fff;
+  color: black;
   transition: border 0.3s ease;
 }
 
