Ajustes barra search

--- a/app/assets/stylesheets/components/_search.scss
+++ b/app/assets/stylesheets/components/_search.scss
@@ -5,9 +5,15 @@
   justify-content: center;
   height: 100%;
   text-align: center;
+  padding: 10px 20px !important;
 }
 .input-search {
   border: 1px solid #a0a0a0;
   text-align: center;
   margin: 0;
+}
+.search-form {
+  margin: 0px;
+  padding: 0px;
+  width: 100%;
 }
