--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,7 +1,7 @@
 <div class="navbar navbar-expand-sm navbar-lewagon">
   <div class="container-fluid justify-content-center">
     <%= link_to root_path, class: "navbar-brand m-0" do %>
-      <%= image_tag "logo.png" %>
+      <%= image_tag "https://res.cloudinary.com/dhkyacden/image/upload/v1733513174/gym_moviment_bu5z7k.png" %>
     <% end %>
   </div>
 </div>
