--- a/app/views/gyms/_info_window.html.erb
+++ b/app/views/gyms/_info_window.html.erb
@@ -1,5 +1,5 @@
 <div>
-  <h4><strong><%= gym.name %></strong></h4>
+  <h4><strong><%= link_to gym.name, gym_path(gym) %></strong></h4>
   <p><%= gym.address %></p>
   <%# <p>Capacidade: <%= gym.capacity %></p>
   <%# <p>Comodidades: <%= gym.amenities.join(', ') %></p>
