--- a/app/assets/stylesheets/components/_form_legend_clear.scss
+++ b/app/assets/stylesheets/components/_form_legend_clear.scss
@@ -9,6 +9,28 @@ legend ~ div.form-check:first-of-type {
   clear: left;
 }
 .label-formularios {
-  color: #f44336 !important;
+  color: $green-light !important;
   font-weight: bold;
+}
+// Formulário
+form {
+  max-width: 600px;
+  margin: 20px auto;
+  background: $gray-b; // Aumentando a opacidade para o fundo
+  border-radius: 10px;
+  padding: 20px;
+  // box-shadow: 0 4px 10px rgba(0, 0, 0, 0.7);
+
+  .btn-primary {
+    width: 100%;
+    border: none;
+    border-radius: 5px;
+    padding: 10px 15px;
+    font-size: 1.2rem;
+    transition: background 0.3s ease-in-out;
+
+    &:hover {
+      background: $primary-color;
+    }
+  }
 }
