--- a/app/assets/stylesheets/components/_map.scss
+++ b/app/assets/stylesheets/components/_map.scss
@@ -7,25 +7,19 @@
 }
 
 .search-bar input {
-  padding: 8px;
+  padding: 7px;
   border: 1px solid #ccc;
   border-radius: 5px 0 0 5px;
-  width: 500px;
-  margin-bottom: 5px;
 }
 
-.search-bar button, .search-bar .view-list-button {
-  padding: 8px 15px;
-  border: none;
-  border-radius: 5px;
-  background-color: #e93803;
+.search-bar button,
+.search-bar .view-list-button {
   color: white;
   cursor: pointer;
-  margin-left: 5px;
-  margin-bottom: 5px;
 }
 
-.search-bar button:hover, .search-bar .view-list-button:hover {
+.search-bar button:hover,
+.search-bar .view-list-button:hover {
   background-color: #0056b3;
 }
 
@@ -48,7 +42,8 @@
   font-weight: bold;
 }
 
-.filters-map input, .filters-map select {
+.filters-map input,
+.filters-map select {
   width: 100%;
   padding: 8px;
   margin-bottom: 10px;
@@ -71,14 +66,9 @@
 }
 
 #toggle-filters {
-  padding: 8px 15px;
   border: none;
-  border-radius: 5px;
-  background-color: #007bff;
   color: white;
   cursor: pointer;
-  margin-left: 5px;
-  margin-bottom: 5px;
 }
 
 #toggle-filters:hover {
@@ -101,41 +91,9 @@
 }
 
 @media (max-width: 402px) {
-  .search-bar {
-    flex-direction: row;
-    align-items: flex-start;
-    width: 100%;
-    gap: 10px;
-  }
-
-  .search-bar input {
-    width: 220px;
-    margin-bottom: 10px;
-    border-radius: 5px;
-  }
-
-  .search-bar button#search-button {
-  //  display: none;
-    width: 100px;
-  }
-
-  .search-bar button, .search-bar .view-list-button {
-    width: 150px;
-    margin-left: 0;
-    margin-bottom: 10px;
-    text-align: center;
-  }
-
   .filters-map {
     position: static;
     width: 100%;
     margin-top: 10px;
   }
-
-  #toggle-filters {
-    width: 150px;
-    margin-left: 0;
-  }
-
-
 }
