--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -1,10 +1,20 @@
 // Define variables for your color scheme
 
 // For example:
-$red: #FD1015;
-$blue: #0D6EFD;
-$yellow: #FFC65A;
-$orange: #E67E22;
-$green: #1EDD88;
-$gray: #0E0000;
-$light-gray: #F4F4F4;
+$red: #fd1015;
+$blue: #0d6efd;
+$yellow: #ffc65a;
+$orange: #e67e22;
+$green: #1edd88;
+$gray: #0e0000;
+$light-gray: #f4f4f4;
+$light-mid: #6e6e6e;
+$black: #000;
+$gray-b: #121212;
+$green-light: #00e20b;
+$green-dark: #015e05;
+$primary-color: #6a11cb;
+$secondary-color: #2575fc;
+$highlight-color: #00ffb9;
+$text-color: #fff;
+$background-gradient: linear-gradient(135deg, #2b2b2b, #1f1f1f); // Fundo mais escuro
