--- a/app/assets/stylesheets/pages/_my_profile.scss
+++ b/app/assets/stylesheets/pages/_my_profile.scss
@@ -8,11 +8,11 @@
   margin: 0 auto;
   padding: 30px;
   border-radius: 10px;
+  border: 1px solid $green-light;
 }
 
 .edit-container {
   padding: 20px;
-  border: 1px solid #b6b5b5;
   border-radius: 10px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
 }
@@ -55,12 +55,8 @@
 /* Botão de envio */
 .edit-profile-form input[type="submit"] {
   width: 100%;
-  padding: 14px;
-  background-color: #f44336; /* Cor vermelha */
-  color: #fff;
-  border: none;
-  border-radius: 8px;
   font-size: 1.1rem;
+  border: 1px solid $green-light;
   cursor: pointer;
   transition: background-color 0.3s ease, transform 0.2s ease;
 }
@@ -77,9 +73,6 @@
 
 .edit-profile-form .upload-btn {
   display: inline-block;
-  padding: 10px 20px;
-  background-color: #f44336; /* Cor vermelha */
-  color: #fff;
   font-size: 1rem;
   border-radius: 8px;
   cursor: pointer;
@@ -100,7 +93,7 @@
 .edit-profile-form img {
   margin-top: 20px;
   border-radius: 50%;
-  border: 2px solid #f44336;
+  border: 2px solid $green-light;
   display: block;
   margin-left: auto;
   margin-right: auto;
