--- a/app/views/gyms/map.html.erb
+++ b/app/views/gyms/map.html.erb
@@ -1,10 +1,15 @@
-<div class="container mt-1">
-  <h3>Mapa Academias</h3>
+<div class="container mt-4">
+  <h3 class="text-light fw-bold text-center mb-4">Mapa Academias</h3>
+
   <div class="search-bar">
-    <input type="text" id="search" name="search" placeholder="Escreva o nome da academia" value="<%= params[:query] %>">
-    <button id="search-button" class="btn btn-danger">Busca</button>
-    <button id="toggle-filters">Filtros</button>
-    <%= link_to 'Ver lista', gyms_path, class: 'view-list-button' %>
+    <div class='d-flex align-items-center w-100 search-container mb-4'>
+      <input class="w-100 rounded-4 text-center" type="text" id="search" name="search" placeholder="Escreva o nome da academia" value="<%= params[:query] %>">
+      <button id="search-button" class="btn text-light m-0 w-auto"><i class="fa-solid fa-magnifying-glass"></i></button>
+    </div>
+    <div class="d-flex w-100 gap-3">
+      <button class="btn btn-success rounded-4 w-50">Filtros</button>
+      <%= link_to 'Ver lista', gyms_path, class: 'view-list-button btn btn-success w-50 rounded-4' %>
+    </div>
   </div>
 
   <aside id="filters" class="filters-map" style="display: none;">
