--- a/app/views/gyms/show.html.erb
+++ b/app/views/gyms/show.html.erb
@@ -1,69 +1,69 @@
 <%= javascript_include_tag 'carousel', 'data-turbo-track': 'reload', defer: true %>
 <%= javascript_include_tag 'alunos', 'data-turbo-track': 'reload', defer: true %>
-<div class="container container-new-form">
-
-  <div class="text-center mt-4">
-    <h1 class="mb-4 fs-4 fw-bold text-dark"><%= @gym.name %></h1>
-    <ul class="p-0 d-flex justify-content-center gap-1">
-    <% if @images.any? %>
-      <% @images.each do |image| %>
-        <% if image %>
-          <li><%= image_tag(image, class: "img-checkin") %></li>
+<div class="container p-4">
+  <div class="container-show p-2 rounded-4">
+    <div class="text-center mt-4">
+      <h1 class="mb-4 fs-4 fw-bold text-light"><%= @gym.name %></h1>
+      <ul class="p-0 d-flex justify-content-center gap-1">
+      <% if @images.any? %>
+        <% @images.each do |image| %>
+          <% if image %>
+            <li><%= image_tag(image, class: "img-checkin") %></li>
+          <% end %>
         <% end %>
+        <li><p class="qtd-alunos d-flex align-items-center justify-content-center d-none text-light">+ <%= @qtd_alunos %></p></li>
       <% end %>
-      <li><p class="qtd-alunos d-flex align-items-center justify-content-center d-none text-dark">+ <%= @qtd_alunos %></p></li>
-    <% end %>
-    </ul>
+      </ul>
 
-    <!-- Exibição do fluxo de alunos -->
-    <p class="mt-3 fw-bold">Alunos onGym</p>
-    <div class="d-flex justify-content-center gap-3">
-      <p class="mt-3 fw-bold">Homens: <%= @fluxo["Male"].to_i %></p>
-      <p class="mt-3 fw-bold">Mulheres: <%= @fluxo["Female"].to_i %></p>
-      <p class="mt-3 fw-bold">Fluxo: <%= @fluxo_medio %>%</p>
-    </div>
-  </div>
-
-  <!-- Formulário de Check-in -->
-  <%= simple_form_for [@gym, Appointment.new] do |f| %>
-    <%= f.hidden_field :gym_id, value: @gym.id %>
-    <%= f.hidden_field :user_id, value: current_user.id %>
-    <%= f.hidden_field :checkin_date, value: Date.today %>
-    <%= f.hidden_field :checkin_hour, value: Time.current %>
-    <%= f.submit "Check-in", class: "btn btn-danger text-light rounded-4 w-100" %>
-  <% end %>
-
-  <!-- Exibição do Carrossel de Imagens -->
-  <% if @gym.images.present? %>
-    <div id="carouselExample" class="carousel slide mt-4">
-      <div class="carousel-inner lista-carousel carousel-height">
-      <% @gym.images.each do |image| %>
-        <div class="carousel-item">
-          <%= image_tag(image, class: "img-gym rounded-4") %>
-        </div>
-      <% end %>
+      <!-- Exibição do fluxo de alunos -->
+      <p class="mt-3 fw-bold text-light">Alunos onGym</p>
+      <div class="d-flex justify-content-center gap-3">
+        <p class="mt-3 text-light">Homens: <%= @fluxo["Male"].to_i %></p>
+        <p class="mt-3 text-light">Mulheres: <%= @fluxo["Female"].to_i %></p>
+        <p class="mt-3 text-light">Fluxo: <%= @fluxo_medio %>%</p>
       </div>
-      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        <span class="visually-hidden">Previous</span>
-      </button>
-      <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
-        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        <span class="visually-hidden">Next</span>
-      </button>
     </div>
-  <% end %>
 
-  <!-- Exibição das comodidades -->
-  <div class="mt-4 p-4 rounded-4 comodidades">
-    <h6 class="fw-bold">O local oferece:</h6>
-    <ul class="p-1 row">
-      <% @amenities.each do |amenity| %>
-        <li class="col-6 d-flex gap-2 align-items-center">
-          <i class="fa-regular fa-circle-check"></i><%= amenity %>
-        </li>
-      <% end %>
-    </ul>
+    <!-- Formulário de Check-in -->
+    <%= simple_form_for [@gym, Appointment.new], html: { class: "checkin-form" } do |f| %>
+      <%= f.hidden_field :gym_id, value: @gym.id %>
+      <%= f.hidden_field :user_id, value: current_user.id %>
+      <%= f.hidden_field :checkin_date, value: Date.today %>
+      <%= f.hidden_field :checkin_hour, value: Time.current %>
+      <%= f.submit "Check-in", class: "btn btn-success text-light rounded-4 w-100" %>
+    <% end %>
+
+    <!-- Exibição do Carrossel de Imagens -->
+    <% if @gym.images.present? %>
+      <div id="carouselExample" class="carousel slide mt-4">
+        <div class="carousel-inner lista-carousel carousel-height">
+        <% @gym.images.each do |image| %>
+          <div class="carousel-item">
+            <%= image_tag(image, class: "img-gym rounded-4") %>
+          </div>
+        <% end %>
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+        </button>
+      </div>
+    <% end %>
+
+    <!-- Exibição das comodidades -->
+    <div class="mt-4 p-4 rounded-4 comodidades">
+      <h6 class="fw-bold">O local oferece:</h6>
+      <ul class="p-1 row">
+        <% @amenities.each do |amenity| %>
+          <li class="col-6 d-flex gap-2 align-items-center">
+            <i class="fa-regular fa-circle-check"></i><%= amenity %>
+          </li>
+        <% end %>
+      </ul>
+    </div>
   </div>
-
 </div>
