--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -6,14 +6,14 @@
     </video>
   </div>
   <div class="overlay"></div>
-  <div class="content">
-    <h1>Melhores academias e parceiros de bem-estar em um só benefício</h1>
+  <div class="content w-100">
+    <h1>Gym Movement</h1>
   </div>
-  <div class="banner-container">
+  <%# <div class="banner-container">
     <div class="banner">
       <a href="https://gym-suplement-909fe7f2432b.herokuapp.com/" target="_blank">
         <img src="https://res.cloudinary.com/dhkyacden/image/upload/v1733257956/173133_leuqk5.jpg" alt="Banner">
       </a>
-    </div>
+    </div> %>
   </div>
 </section>
