--- a/app/assets/stylesheets/components/_form_legend_clear.scss
+++ b/app/assets/stylesheets/components/_form_legend_clear.scss
@@ -16,7 +16,7 @@ legend ~ div.form-check:first-of-type {
 form {
   max-width: 600px;
   margin: 20px auto;
-  background: $gray-b; // Aumentando a opacidade para o fundo
+  background: white; // Aumentando a opacidade para o fundo
   border-radius: 10px;
   padding: 20px;
   // box-shadow: 0 4px 10px rgba(0, 0, 0, 0.7);
