--- a/app/assets/stylesheets/components/_map.scss
+++ b/app/assets/stylesheets/components/_map.scss
@@ -29,11 +29,11 @@
   border: 1px solid #ccc;
   border-radius: 5px;
   background-color: #f9f9f9;
-  position: absolute;
+  position: inherit;
   top: 60px;
   right: 10px;
   z-index: 1000;
-  width: 500px;
+  width: 400px;
 }
 
 .filters-map label {
@@ -90,7 +90,7 @@
   color: white;
 }
 
-@media (max-width: 402px) {
+@media (max-width: 412px) {
   .filters-map {
     position: static;
     width: 100%;
