--- a/app/assets/stylesheets/pages/_index_gyms.scss
+++ b/app/assets/stylesheets/pages/_index_gyms.scss
@@ -2,13 +2,17 @@
   border-radius: 5px;
 }
 
+.container-index {
+  margin: 10px;
+}
+
 #query {
   background-color: white;
 }
 
 #botoes-index {
   width: 100%;
-  max-width: 300px;
+  max-width: 400px;
   margin-bottom: 10px;
 }
 
@@ -22,6 +26,7 @@
 .search-container {
   display: grid;
   justify-items: center;
+  height: 100px;
 }
 
 .gyms-container {
@@ -53,7 +58,7 @@
   }
 }
 
-@media (max-width: 402px) {
+@media (max-width: 412px) {
   .search-bar-index,
   #botoes-index {
     width: 100%;
@@ -66,6 +71,7 @@
 
   #query {
     margin-left: 10px;
+    width: 340px;
   }
 
   .filters {
@@ -73,7 +79,7 @@
   }
 
   #botoes-index {
-    flex-direction: column;
+    flex-direction: initial;
     align-items: stretch;
   }
 
@@ -81,5 +87,8 @@
   #botoes-index a {
     width: 100%;
     margin-bottom: 10px;
+  }
+  .button-group{
+    display: block ruby;
   }
 }
