--- a/app/views/gyms/index.html.erb
+++ b/app/views/gyms/index.html.erb
@@ -1,4 +1,4 @@
-<div class="container mt-4">
+<div class="container-index mt-4">
   <h3 class="text-center mt-4 mb-4 text-light fw-bold">Lista Academias</h3>
 
   <div class="search-container">
@@ -8,7 +8,7 @@
     </div>
 
     <div id="botoes-index" class="d-flex flex-wrap justify-content-between align-items-center mb-3 w-100">
-      <div class="button-group d-flex w-100 align-items-center gap-2">
+      <div class="button-group">
         <button id="toggleFilterBtn" class="btn btn-success mt-3 mb-3 rounded-4 m-0">Filtros</button>
         <%= link_to 'Ver mapa', map_path, class: 'btn btn-success rounded-4 m-0' %>
       </div>
