--- a/app/views/gyms/map.html.erb
+++ b/app/views/gyms/map.html.erb
@@ -2,7 +2,7 @@
   <h3 class="text-light fw-bold text-center mb-4">Mapa Academias</h3>
 
   <div class="search-bar">
-    <div class='d-flex align-items-center w-100 search-container mb-4'>
+    <div class='d-flex align-items-center w-100 mb-4'>
       <input class="w-100 rounded-4 text-center" type="text" id="search" name="search" placeholder="Escreva o nome da academia" value="<%= params[:query] %>">
       <button id="search-button" class="btn text-light m-0 w-auto"><i class="fa-solid fa-magnifying-glass"></i></button>
     </div>
