--- a/app/views/chats/show.html.erb
+++ b/app/views/chats/show.html.erb
@@ -8,18 +8,12 @@
 
         <div class="card-body" style="height: 400px; overflow-y: auto;" id="messages">
           <%= turbo_frame_tag "messages" do %>
-            <% if @messages.present? %>
-              <%= render partial: "chat_messages/chat_message", collection: @messages %>
-            <% else %>
-              <p class="text-center text-muted">Nenhuma mensagem ainda. Comece uma conversa!</p>
-            <% end %>
+            <%= render partial: "chat_messages/chat_message", collection: @messages %>
           <% end %>
         </div>
 
         <div class="card-footer" id="message-form">
-          <%= form_with(model: ChatMessage.new,
-                       url: chat_path,
-                       data: { controller: "chat" }) do |f| %>
+          <%= form_with(model: @chat_message, data: { controller: "chat" }) do |f| %>
             <div class="d-flex">
               <%= f.text_field :content,
                   class: "form-control me-2",
