--- a/app/views/chats/show.html.erb
+++ b/app/views/chats/show.html.erb
@@ -1,3 +1,4 @@
+<%= turbo_stream_from current_user %>
 <div class="container mt-4">
   <div class="row justify-content-center">
     <div class="col-md-8">
